--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>konstrukt-portfolio-vision</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Konrad Krawczyk - portfolio</title>
+    <meta name="description" content="Konrad Krawczyk - portfolio" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="konstrukt-portfolio-vision" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Konrad Krawczyk - portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/bits1.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/bits1.jpg" />
   </head>
 
   <body>
