--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="konstrukt-portfolio-vision" />
     <meta property="og:description" content="Konrad Krawczyk - portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/bits1.jpg" />
+    <meta property="og:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/thumbn.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/bits1.jpg" />
+    <meta name="twitter:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/thumbn.png" />
   </head>
 
   <body>
