--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad Krawczyk - portfolio</title>
     <meta name="description" content="Konrad Krawczyk - portfolio" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Konrad Krawczyk" />
 
     <meta property="og:title" content="konstrukt-portfolio-vision" />
     <meta property="og:description" content="Konrad Krawczyk - portfolio" />
