--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Konrad Krawczyk - portfolio" />
     <meta name="author" content="Konrad Krawczyk" />
 
-    <meta property="og:title" content="konstrukt-portfolio-vision" />
+    <meta property="og:title" content="Konrad Krawczyk - portfolio" />
     <meta property="og:description" content="Konrad Krawczyk - portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://nbujwalvdcjefepwnyky.supabase.co/storage/v1/object/public/assets/images/thumbn.png" />
